Hotword recognition big improvements + more things
List of changes:
- Now PocketSphinx is instantaneous while restarting after Google
  recognition finishes. PocketSphinx is also not in a service anymore -
  it's an instantiated submodule.
  More important than that, it now won't randomly stop listening because
  it's not a different process to be managed - it's the app's main
  process, which is in the foreground, so higher priority is given to
  it.
  I've also replaced the higher quality files with files adapted to my
  voice that I made 3 years ago. Not sure how it impacts other voices,
  but as a start, this thing stopped detecting being "called" when
  CLASSICAL music is playing (WTF). So that's already a mega improvement
  and I'll keep the new files. I've also removed all other files, so the
  app size dropped again.
  And the files are now being copied to the internal app files directory
  instead of the external one, which may or may not be available.
  With all these changes (including the previous committed one - which I
  partially undid, and kept now only "visor" and "visors" as a test),
  the recognizer should be way better than it was before, hopefully. Btw
  I left "visors" because of possible noise detected as "s" after
  "visor".
- Added command to stop and start listening in the background. Useful to
  release the microphone for other apps to use when the audio source
  used for the background recognition is VOICE_RECOGNITION. If it's
  HOTWORD, won't be necessary to tell him to stop listening, because he
  automatically will stop if the microphone is needed elsewhere.
- Since the hotword recognizer is not in an external service and I'd
  still like it to process stuff on some thread other than the main one,
  the SpeechRecognizerSetup class now has a small change to include a
  HandlerThread parameter.
- If VISOR enables Bluetooth and any device attempts to connect,
  instead of disabling Bluetooth right away, he will first try to
  disconnect t